--- a/widgets/widget/ui/resource/resource.qrc
+++ b/widgets/widget/ui/resource/resource.qrc
@@ -11,4 +11,18 @@
     <file>stargnantShadow/炎华之形.png</file>
     <file>stargnantShadow/震厄之形.png</file>
   </qresource>
+  <qresource prefix="war">
+    <file>echoOfWar/毁灭.png</file>
+    <file>echoOfWar/可可利亚.png</file>
+    <file>echoOfWar/丰饶.png</file>
+  </qresource>
+  <qresource prefix="cavern">
+    <file>cavern/2.png</file>
+    <file>cavern/3.png</file>
+    <file>cavern/1.png</file>
+    <file>cavern/4.png</file>
+    <file>cavern/5.png</file>
+    <file>cavern/6.png</file>
+    <file>cavern/7.png</file>
+  </qresource>
 </RCC>
